<resources>
    <string name="app_name">Химлаборатория «Топливо»</string>
    <string name="app_main">Журнал учета оборудования (СИ и ИО)</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="exit">Выйти</string>
    <string name="today">Сегодня</string>
    <string name="minus_1_year">−1 год</string>
    <string name="plus_1_year">+1 год</string>
    <string name="equipment_name">Наименование оборудования (ИО, СИ)</string>
    <string name="mark_type">Марка, тип</string>
    <string name="serial_number">Заводской номер (инв. номер)</string>
    <string name="year_of_release_commissioning">Год выпуска (ввода в эксплуатацию)</string>
    <string name="calibration_intervals">Периодичность метролог. аттестации, поверки, калибровки, мес.</string>
    <string name="last_calibration_date">Дата последней аттестации, поверки, калибровки</string>
    <string name="pick_date">Выберите дату</string>
    <string name="conservation_date">Дата консервации</string>
    <string name="reactivation_date">Дата расконсервации</string>
    <string name="notes">Примечания</string>
    <string name="sorting_by_alphabet">Сортировка по алфавиту</string>
    <string name="sorting_by_time">Сортировка по времени</string>
    <string name="settings">Настройки</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="notifications">Уведомления:</string>
    <string name="remove_confirm">Вы действительно хотите удалить \"%1$s\"?</string>
    <string name="remove_question">Удалить?</string>
    <string name="cancel">Отмена</string>
    <string name="text_size">Размер текста (%1$d)</string>
    <string name="good">Хорошо</string>
    <string name="error">Ошибка</string>
    <string name="save">Сохранить</string>
    <string name="add_entry">Добавить запись</string>
    <string name="set_date">%1$d-%2$s%3$d-%4$s%5$d</string>
    <string name="set_date2">%1$d-%2$s%3$d</string>
    <!--%1$s is a string and %2$d is a decimal number-->
    <string name="equipments">Оборудование</string>
    <string name="reagents">Реактивы</string>
    <string name="reagent_name">Наименование реактива</string>
    <string name="lot">Партия</string>
    <string name="supplier">Поставщик</string>
    <string name="date_of_receiving">Дата получения</string>
    <string name="complaints">Претензии</string>
    <string name="qualification">Квалификация</string>
    <string name="manufacturing_date">Дата изготовления</string>
    <string name="shelf_life">Срок хранения</string>
    <string name="storage_conditions">Условия хранения</string>
    <string name="normal">Обычные</string>
    <string name="unit_of_measurement">Единица измерения</string>
    <string name="quantity_left">Количество в остатке</string>
    <string name="quantity_received">Количество получено</string>
    <string name="minimal_quantity">Минимальное количество</string>
    <string name="consumption_date">Дата расходования</string>
    <string name="quantity">Количество</string>
    <string name="purpose">Цель</string>
    <string name="add_lot">Добавить партию</string>
    <string name="consumption">Расход</string>
    <string name="responsible">Ответственный</string>
    <string name="changed">Изменено</string>
    <string name="shelf_life_expires">Истекает срок</string>
    <string name="shelf_life_has_expired">Срок истёк</string>
    <string name="residue">Остаток</string>
    <string name="no">Нет</string>
    <string name="density">Плотность</string>
    <string name="consumption_journal">Журнал расхода</string>
    <string name="no_date">Нет даты</string>
    <string name="for_purpose">На цель</string>
    <string name="entry_made">Запись внес</string><!--The entry was made by-->
</resources>