<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Dialog_reagent_consumption">

    <TextView
        android:id="@+id/textViewTitleC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:textColor="@color/colorIcons"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consumption_date"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1Ce"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:textColor="#FF000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button1C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_date" />
            </LinearLayout>

            <TextView
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText2Ce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/density"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText4Ce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="1"
                android:inputType="numberDecimal"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText3Ce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:textColor="#FF000000"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>